app-gitops/services/order-service/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: order-service
  labels:
    app: order-service
spec:
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: order-service
